# Algorithms-Project3

./: README.md
Color/: CMakeLists.txt  ImageCarver.cpp  ImageCarver.hpp  color.ppm
Grey/: CMakeLists.txt  ImageCarver.cpp  ImageCarver.hpp
Part-1/: ImageCarver.cpp  ImageCarver.hpp  carve_seam.cpp
